added additional properties into Skill
